# price-savvy-backend

./: .env.example  .gitignore  README.md  main.py  price_savvy.db  pyproject.toml  test_price_savvy.db
app/: __init__.py  config.py  database.py
app/api/: __init__.py  routes.py
app/errors/: __init__.py
app/models/: __init__.py  price_history.py  product.py
app/scrapers/: __init__.py  ajio_scraper.py  amazon_scraper.py  base_scraper.py  croma_scraper.py  flipkart_scraper.py  jiomart_scraper.py  meesho_scraper.py  myntra_scraper.py  selenium_driver.py  selenium_scraper.py  snapdeal_scraper.py  tatacliq_scraper.py
app/services/: __init__.py  scraper_service.py
app/utils/: __init__.py  cache.py  helpers.py  normalizer.py  rate_limiter.py  validators.py
frontend/: index.html
scripts/: init_db.py  test_db.py
